Updated index.html code

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <div class="container-fluid">
-  <h1>Hello, I have successfully deployed my webhook DevOps project!</h1>
+  <h1>Hello, I have successfully deployed my WWebhook DevOps project!</h1>
 </div>
 
 </body>
